basic image alignment fix

--- a/handmade_goods/assets/css/product.css
+++ b/handmade_goods/assets/css/product.css
@@ -25,7 +25,7 @@
 }
 
 .left img {
-    height: 620px;
+    height: 675px;
     border-radius: 16px;
 }
 
@@ -260,8 +260,8 @@ main section.main nav.breadcrumb-nav {
 
 .bg-dark .right,
 .bg-dark .reviews {
-  background: #2b2b2b;
-  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
+    background: #2b2b2b;
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
 }
 
 .bg-dark textarea{
